fix: menu z-index bugs and button widths

--- a/assets/css/ioda/sass/base/_overrides.scss
+++ b/assets/css/ioda/sass/base/_overrides.scss
@@ -9,7 +9,7 @@
 .ant-btn {
   display: flex;
   align-items: center;
-  width: min-content;
+  justify-content: center;
 }
 
 .ant-btn-icon-only {
